# heroic-spirit-agent

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
openspec/changes/repair-multi-hsa-provenance/: README.md  design.md  proposal.md  tasks.md
openspec/changes/repair-multi-hsa-provenance/specs/hsa-evidence-contract/: spec.md
src/hsa_thinktank/: __init__.py  aggregation.py  audit.py  catalog.py  chat.py  chat_store.py  cli.py  demo.py  errors.py  events.py  finalization.py  hermes_event_bridge.py  memory.py  models.py  orchestrator.py  profile_manager.py  prompting.py  protocols.py  provenance.py  routing.py  run_store.py  runtime.py  tool_policy.py
src/hsa_thinktank/catalog/hsas/: albert-einstein.json  andrej-karpathy.json  charles-darwin.json  charlie-munger.json  confucius.json  donella-meadows.json  elon-musk.json  laozi.json  richard-feynman.json  serenity-aleabitoreddit.json  steve-jobs.json  warren-buffett.json  zhuangzi.json
src/hsa_thinktank/catalog/organizations/: capital-roundtable.json  grand-strategy-cabinet.json  launch-red-team.json  philosophy-roundtable.json  product-roundtable.json  science-technology-roundtable.json  strategy-cabinet.json
src/hsa_thinktank/tui/: __init__.py  app.py
tests/: test_chat.py  test_chat_store.py  test_cli.py  test_core.py  test_events.py  test_memory.py  test_orchestrator.py  test_profile_manager.py  test_protocols.py  test_provenance.py  test_routing.py  test_runtime_policy.py  test_safety_closure.py  test_tui.py
(+1 files in other folders)
