[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hsa-thinktank"
version = "0.3.0"
description = "Auditable multi-HSA decision orchestration on top of Hermes Agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.9"]
tui = ["textual>=8.2,<9"]

[project.scripts]
hsa = "hsa_thinktank.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hsa_thinktank = ["catalog/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
